[package]
name = "quicd-ebpf-router-ebpf"
version = "0.1.0"
edition.workspace = true

[dependencies]
quicd-ebpf-router-common = { path = "../quicd-ebpf-router-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "quicd-ebpf-router"
path = "src/main.rs"
